--- a/src/views/contract/z-contract/add.html
+++ b/src/views/contract/z-contract/add.html
@@ -579,6 +579,14 @@
                                     <option value="0">0天</option>
                                     <option value="1">1天</option>
                                     <option value="2">2天</option>
+                                    <option value="3">3天</option>
+                                    <option value="4">4天</option>
+                                    <option value="5">5天</option>
+                                    <option value="6">6天</option>
+                                    <option value="7">7天</option>
+                                    <option value="8">8天</option>
+                                    <option value="9">9天</option>
+                                    <option value="10">10天</option>
                                 </select>
                             </div>                          
                         
