--- a/src/views/msystem/adress/index.html
+++ b/src/views/msystem/adress/index.html
@@ -30,7 +30,9 @@
                     <label class="layui-form-label" style="width:auto;">门店名称</label>
                     <input type="text" name="Id" autocomplete="off" class="layui-input" placeholder="" id="Name" style="width:auto;">
                 </div>
-               
+                <div class="m-search-item">
+                    <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
+                </div>
             
             <div style="clear:both;"></div>
         </form>
