--- a/src/views/contract/z-contract/tuizu.html
+++ b/src/views/contract/z-contract/tuizu.html
@@ -36,6 +36,7 @@
             var laytpl = layui.laytpl;
             var doc = layui.htcsLG;
             var url = "api/Contract/QuerybyId";
+            var storeurl ="api/bankcard/Query";
             var $ = layui.jquery;
             var form = layui.form;
             var table = layui.table;
@@ -59,6 +60,18 @@
                     , value: myDate
                 });
                 form.render('');
+            //加载银行卡信息
+            doc.objectQuery(storeurl,  {}, function (data) {
+            debugger;
+            var list=[];
+            var rdata=data.numberData;
+            for (var i in rdata) {
+                list.push('<option value="'+ rdata[i].Name +'">'+ rdata[i].Name +'</option>');
+            }
+            debugger;
+            $('select[name="BankName"]').append(list.join(''));
+            form.render();
+            });
                 //加载退租项数据
                 doc.objectQuery("api/Zafei/Zafeilist", {}, function (data) {
                     tuizulist = data.numberData;
@@ -71,7 +84,7 @@
                     return false;
                 });
             });
-
+            
             //下拉框点击事件
             function Event() {
                 //添加退租项新行事件
@@ -183,12 +196,12 @@
 
             });
 //监听单选按钮
-            form.on('radio(FukuanType)', function (data) {
-
-                if (data.value == 1) {
+            form.on('select(FukuanType)', function (data) {
+                debugger;
+                if (data.value == 0) {
                     $("#miaosu").html("实际支付时间");
                 }
-                if (data.value == 0) {
+                if (data.value == 1) {
                     $("#miaosu").html("预约支付时间");
                 }
             });
@@ -467,7 +480,7 @@
                     <div class="layui-inline">
                         <label class="layui-form-label" style="width:auto;">退租类型</label>
                         <div class="layui-input-inline">
-                            <select name="tktypel" lay-verify="required">
+                            <select name="TkType" lay-verify="required">
                                 <option value="0">到期</option>
                                 <option value="1">违约</option>
                                 <option value="2">转租</option>
@@ -476,13 +489,43 @@
                         </div>
                     </div>
                     <div class="layui-inline">
-                        <label class="layui-form-label">收款时间</label>
+                        <label class="layui-form-label">收付款时间</label>
                         <div class="layui-input-inline">
-                            <select name="tktypel" lay-verify="required">
+                            <select name="FukuanType" lay-filter="FukuanType" lay-verify="required">
                                 <option value="">请选择</option>
                                 <option value="0">现在收款</option>
                                 <option value="1">预约收款</option>
                             </select>
+                        </div>
+                        <label class="layui-form-label" style="text-align:left;width:auto;color:red;">选择预约收款将生成账单</label>
+                    </div>
+                </div>
+                <div class="layui-form-item">
+                   
+                    <div class="layui-inline">
+                        <label class="layui-form-label" style="width:auto;">收款人</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="AmountName" value="{{doc.ns(d.payee)}}"" id="AmountName" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <label class="layui-form-label" style="width:auto;">账号</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="Account" id="Account"  value="{{doc.ns(d.accounts)}}" autocomplete="off" class="layui-input">
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <label class="layui-form-label" style="width:auto;">银行</label>
+                        <div class="layui-input-inline">
+                                <select name="BankName"  id="BankName" lay-filter="BankName" lay-search>         
+                                <option value="{{doc.ns(d.bank)}}">{{doc.ns(d.bank)}}</option>
+                                </select>
+                        </div>
+                    </div>
+                    <div class="layui-inline">
+                        <label class="layui-form-label" style="width:auto;">支行</label>
+                        <div class="layui-input-inline">
+                            <input type="text" name="subbranch" id="subbranch" value="{{doc.ns(d.accounts)}}" autocomplete="off" class="layui-input">
                         </div>
                     </div>
                 </div>
@@ -503,16 +546,15 @@
                             </select>
                         </div>
                     </div>
-                    <div class="layui-inline">
-                        <label class="layui-form-label">备注</label>
-
-                        <div class="layui-input-block">
-                            <textarea placeholder="请输入内容" name="Bank" class="layui-textarea"></textarea>
-                        </div>
-
-                    </div>
                 </div>
-                
+                <div class="layui-form-item">
+                        <div class="layui-inline">
+                                <label class="layui-form-label">备注</label>
+                                <div class="layui-input-block">
+                                    <textarea placeholder="请输入内容" name="Bank" class="layui-textarea"></textarea>
+                                </div>
+                         </div>
+                 </div>
                 <div class="layui-form-item">
                     <div class="layui-inline">
                         <label class="layui-form-label" style="text-align:left;width:auto;">收款总额</label>
@@ -523,16 +565,7 @@
                         <label class="layui-form-label" style="text-align:left;width:auto;color:red;">*该笔为收款总额 (正数为收入, 负数为支出)</label>
                     </div>
                 </div>
-                <div class="layui-collapse" lay-accordion="">
-                    <div class="layui-colla-item">
-                      <h2 class="layui-colla-title">租客银行卡信息</h2>
-                      <div class="layui-colla-content layui-show">
-                        <span class="yspan">收款人:{{doc.ns(d.payee)}}</span>
-                        <span class="yspan">银行：{{doc.ns(d.accounts)}}</span>
-                        <span class="yspan">账号:{{doc.ns(d.bank)}}</span>
-                      </div>
-                    </div>
-                </div>
+               
             </div>
             <!--退款项-->
             <div class="layui-tab-content">
