--- a/src/views/msystem/adress/add.html
+++ b/src/views/msystem/adress/add.html
@@ -8,12 +8,24 @@
        <form class="layui-form hcs-form form-wrapper" action="">
            <div class="form-content">
             <div class="layui-form-item">
-                <div class="layui-inline">
+                    <label class="layui-form-label" style="width:auto;">所在市</label>
+                    <div class="layui-input-inline" style="width: auto;">
+                        <select lay-filter="CityName" name="CityName" lay-search></select>
+                    </div>
+                    <label class="layui-form-label" style="width: auto;">所在区</label>
+                    <div class="layui-input-inline" style="width:auto;">
+                        <select lay-filter="AreaName" name="AreaName" lay-search></select>
+                    </div>
+                    
+            </div>
+            <div class="layui-form-item">
+                 
+                    <div class="layui-inline">
                     <label class="layui-form-label" style="width:auto;">门店名称</label>
                     <div class="layui-input-inline">
                         <input type="text" name="name" lay-verify="required" autocomplete="off" class="layui-input" placeholder="名称" id="Name">
                     </div>
-                </div>
+                    </div>
             </div>
             </div>
            <div class="form-bottom">
@@ -35,11 +47,72 @@ function LoadData(tableid,layerindex){
            var url = "api/Menu/Querymenu";
            var $ = layui.jquery;
            var form = layui.form;
+           var cityListUrl = 'api/BaseData/QueryCity1';
+           var areaListUrl = 'api/Map/PCQueryArea';
            form.render('');
            doc.tjgd();
            $("#cancelbtn").click(function(){
-    layer.close(layerindex);
-   })
+           layer.close(layerindex);
+           })
+           getCityList();
+            var filter = {
+                currentCity: '',
+                cityList: [],
+                cityOptions: [],
+                currentArea: '',
+                areaList: [],
+                areaOptions: [],
+                currentCircle: '',
+                circleList: [],
+                circleOptions: []
+            }
+            function getCityList () {
+                doc.objectQuery(cityListUrl, {}, function(result) {
+                    console.log(result);
+                    if (result.Code === 0) {
+                        for (let i in result.numberData) {
+                            if(filter.currentCity === '') {
+                                filter.currentCity = result.numberData[i].RegionName;
+                            }
+                            filter.cityList.push({
+                                name: result.numberData[i].RegionName,
+                                id: result.numberData[i].Id
+                            })
+                            filter.cityOptions.push('<option value="'+ result.numberData[i].RegionName +'">'+ result.numberData[i].RegionName +'</option>')
+                        }
+                        $('select[name="CityName"]').html(filter.cityOptions.join('')).val(filter.currentCity);
+                         getAreaList();
+                        form.render('select');
+                    }
+                })
+            }
+            function getAreaList () {
+                doc.objectQuery(areaListUrl, {
+                    name: filter.currentCity
+                }, function (result) {
+                    console.log(result);
+                    filter.areaList = result.numberData[0].districts;
+                    let cityOptions = [];
+                    for (let i in filter.areaList) {
+                        cityOptions.push('<option value="'+ filter.areaList[i].name +'">'+ filter.areaList[i].name +'</option>')
+                    }
+                    $('select[name="AreaName"]').html(cityOptions.join('')).val('');
+                    form.render('select');
+                })
+            }
+            form.on('select(CityName)', function (data) {
+                console.log(data);
+                filter.currentCity = data.value;
+                getAreaList();
+            })
+
+            form.on('select(AreaName)', function (data) {
+                filter.currentArea = data.value;
+            })
+          
+        
+ 
+           
            debugger;
            //监听提交
         form.on('submit(save)', function (data) {
