--- a/src/views/msystem/adress/edit.html
+++ b/src/views/msystem/adress/edit.html
@@ -6,8 +6,22 @@
 </script>
 <script id="editzafeiscript" type="text/html">
  {{# var doc = layui.htcsLG;}}
- <form class="layui-form hcs-form" action="">
-         <div class="form-content">
+ <form class="layui-form layui-form-pane hcs-form form-panel" action="" id="add-bill-form">          <div class="form-content">
+                <div class="layui-form-item address-form"> 
+             
+                        <div class="layui-inline"> 
+                                <label class="layui-form-label">城市</label> 
+                               
+                                    <select name="CityName" id="CityName" lay-filter="CityName"  lay-verify="required" lay-search></select>
+                                </div>
+                                <div class="layui-inline"> 
+                                    <label class="layui-form-label">区域</label> 
+                              
+                                    <select name="AreaName" id="AreaName" lay-filter="AreaName"   lay-verify="required"></select>
+                                </div> 
+                        
+                    </div>
+                
           <div class="layui-form-item">
              
               <div class="layui-inline">
@@ -23,14 +37,14 @@
              </div>
          <div class="form-bottom">
              <div class="form-wrap">
-                <button class="layui-btn layui-btn-primary" id="cancelbtn" >取消</button>
+            
                 <button class="layui-btn"  lay-filter="save" lay-submit="">保存</button>
              </div>
          </div>
      </form>
  
 </script>
-<div id="edit-zafei-view">
+<div id="edit-zafei-view" class="form-wrapper">
 </div>
 
 
@@ -43,23 +57,84 @@ function LoadData(id,tableid,layerindex){
         var url = "api/store/Queryid";
         var $ = layui.jquery;
         var form = layui.form;
-        doc.objectQuery(url, {"Id":id}, function (data) {
+        var cityListUrl = 'api/BaseData/QueryCity1';
+        var areaListUrl = 'api/Map/PCQueryArea';
+      
+            var filter = {
+                currentCity: '',
+                cityList: [],
+                cityOptions: [],
+                currentArea: '',
+                areaList: [],
+                areaOptions: [],
+                currentCircle: '',
+                circleList: [],
+                circleOptions: []
+            }
+        
+            function getCityList () {
+                doc.objectQuery(cityListUrl, {}, function(result) {
+                    console.log(result);
+                    if (result.Code === 0) {
+                        for (let i in result.numberData) {
+                            if(filter.currentCity === '') {
+                                filter.currentCity = result.numberData[i].RegionName;
+                            }
+                            filter.cityList.push({
+                                name: result.numberData[i].RegionName,
+                                id: result.numberData[i].Id
+                            })
+                            filter.cityOptions.push('<option value="'+ result.numberData[i].RegionName +'">'+ result.numberData[i].RegionName +'</option>')
+                        }
+                        $('select[name="CityName"]').html(filter.cityOptions.join('')).val(filter.currentCity);
+                        getAreaList();
+                        form.render('select');
+                    }
+                })
+            }
+            function getAreaList () {
+                doc.objectQuery(areaListUrl, {
+                    name: filter.currentCity
+                }, function (result) {
+                    console.log(result);
+                    filter.areaList = result.numberData[0].districts;
+                    let cityOptions = [];
+                    for (let i in filter.areaList) {
+                        cityOptions.push('<option value="'+ filter.areaList[i].name +'">'+ filter.areaList[i].name +'</option>')
+                    }
+                    $('select[name="AreaName"]').html(cityOptions.join('')).val(filter.currentArea);
+                  
+                    form.render('select');
+                })
+            }
+           
+            doc.objectQuery(url, {"Id":id}, function (data) {
              debugger;
+             filter.currentCity= data.numberData.CityName;
+             filter.currentArea= data.numberData.AreaName;
              var getTpl = editzafeiscript.innerHTML
            , view = document.getElementById('edit-zafei-view');
              laytpl(getTpl).render(data.numberData, function (html) {
                  view.innerHTML = html;
              });
-             
+             form.render('');
+             getCityList();
+             form.on('select(CityName)', function (data) {
+                filter.currentCity = data.value;
+                getAreaList();
+            })
+            form.on('select(AreaName)', function (data) {
+                filter.currentArea = data.value;
+            })
                  //监听提交
-        form.on('submit(save)', function (data) {
-         data.field.Id=id;
-         var saveoption={
-         url:'api/store/save',
-         data:data.field,
-         tableid:tableid,
-         callBack:function(){
-            layer.close(layerindex);
+           form.on('submit(save)', function (data) {
+           data.field.Id=id;
+           var saveoption={
+           url:'api/store/save',
+           data:data.field,
+           tableid:tableid,
+           callBack:function(){
+           layer.close(layerindex);
        }
      }
      doc.Submit(saveoption);
@@ -68,8 +143,7 @@ function LoadData(id,tableid,layerindex){
  $("#cancelbtn").click(function(){
     layer.close(layerindex);
    })
-              form.render('');
-              doc.tjgd();
+             
          });
      
  
