--- a/src/views/set/base/tixian.html
+++ b/src/views/set/base/tixian.html
@@ -15,47 +15,27 @@
         </ul>
     </div>
     <div class="layui-col-md11">
-            <div class="i-title">
-                <div class="left">
-                    <div class="block">
-                    <p class="number">
-                    <div class="number" style="font-size: 16px; font-weight: 500; color: rgb(0, 0, 0);">  
-                        <span style="font-size: 26px; color: rgb(243, 0, 26);"> 
-                        <span id="count303216">0.00</span> 
-                        <span></span> </span>  
-                    </div>
-                    </p>
-                    <p class="text"> 实付总额(元)</p>
-                     </div>
-                   
-    
-                    
-                </div>
-            </div>
+            
             <div class="m-search" style="background-color: #e0e7ec;padding-top: 20px;padding-bottom: 20px;">
                     <form class="layui-form hcs-form" action="" lay-filter="search" id="guest-search-form">
-                        <div class="m-search-item">
-                            <input type="text" name="Id" autocomplete="off" class="layui-input" placeholder="编号" id="Id" style="width:auto;">
+                        <div class="m-search-item" >
+                            <label class="layui-form-label">创建时间</label>
+                            <div class="layui-input-inline" style="width: 144px;">
+                                    <input type="text" name="BeginTime" autocomplete="off" class="layui-input" placeholder="开始时间" id="BeginTime">
+                                </div>
+                                <div class="layui-input-inline" style="width: 144px;">
+                                        <input type="text" name="EndTime" autocomplete="off" class="layui-input" placeholder="结束时间" id="EndTime">
+                                    </div>
                         </div>
                         <div class="m-search-item">
-                            <input type="text" name="Trader" autocomplete="off" placeholder="交易对象" class="layui-input" id="Name" style="width:auto;">
+                            <select name="Status" lay-verify="" id="Status">
+                               <option value="">状态</option>                           
+                               <option value="0">待转账</option>
+                               <option value="1" >已转账</option>
+                            </select>  
                         </div>
-                        <div class="m-search-item">
-                            <input type="text" name="PayMentNumber" autocomplete="off" placeholder="支付流水号" class="layui-input" id="ddd" style="width:auto;">
-                        </div>
-                        <div class="m-search-item">
-                                <input type="text" name="CostName" autocomplete="off" placeholder="费用名称" class="layui-input" id="ddd" style="width:auto;">
-                        </div>
-                        <div class="m-search-item">
-                            <select name="Source" lay-verify="" id="Source">
-                               <option value="">收支类型</option>                           
-                               <option value="收入">收入</option>
-                               <option value="支出" >支出</option>
-                        </select>  
-                        </div>
-                        <div class="m-search-item">
-                            <input type="text" name="CreateTime" placeholder="创建时间" autocomplete="off" class="layui-input" id="CreateTime">
-                        </div>
+                        
+                       
                         <div class="m-search-item">
                             <button class="layui-btn" lay-submit="" lay-filter="search">搜索</button>
                         </div>
