--- a/src/views/house/d-house/index.html
+++ b/src/views/house/d-house/index.html
@@ -43,7 +43,7 @@
                         <div class="m-top m-zt-y" id="m-top">
                             <ul>
                                 <li>
-                                    <span>系统编号:{{itemtop.ID}}</span>-<span style="">房间名称：{{itemtop.Name}}</span>
+                                    <span style="">房间名称：{{itemtop.Name}}</span>
                                     <span class="caidan-icon" id="caidan-icon-{{itemtop.ID}}" view="false">
                                         <i class="layui-icon" id="lay-ic-{{itemtop.ID}}" style="font-size:22px;" view="false">&#xe65f;</i>
                                     </span>
@@ -65,7 +65,7 @@
                         <div class="m-top m-zt-k" id="m-top">
                             <ul>
                                 <li>
-                                    <span>系统编号:{{itemtop.ID}}</span>-<span style="">房间名称：{{itemtop.Name}}</span>
+                                    <span class="fylx">{{formatter1(itemtop.sign)}}</span><span style="">房间名称：{{itemtop.Name}}</span>
                                     <span class="caidan-icon" id="caidan-icon-{{itemtop.ID}}" view="false">
                                         <i class="layui-icon" id="lay-ic-{{itemtop.ID}}" style="font-size:22px;" view="false">&#xe65f;</i>
                                     </span>
