--- a/src/views/house/h-house/add.html
+++ b/src/views/house/h-house/add.html
@@ -30,6 +30,7 @@ img {
             var url ="api/House/publicHousexq";
             var url1 ="api/BaseData/Queryfgy";
             var tsurl="api/BaseData/Query";
+            var storeurl="api/cellname/Querylist";
             var cityListUrl = 'api/BaseData/QueryCity1';
             var areaListUrl = 'api/Map/PCQueryArea';
             var doc = layui.htcsLG;
@@ -45,14 +46,15 @@ img {
             doc.objectQuery(tsurl, para, function (result) {
                     alldata.push(result.numberData);
                     doc.objectQuery(url1, {  }, function (data) {
-                    debugger;
+                    alldata.push(data.numberData);
+                    doc.objectQuery(storeurl,  {"PageSize":100000,"PageIndex":1}, function (data) {
                     alldata.push(data.numberData);
                     laytpl(getTpl).render(alldata, function (html) {
                     view.innerHTML = html;
                     form.render('');
                     });
                     event();
-                    debugger;
+                });
              });
             });
             getCityList();
@@ -342,7 +344,6 @@ img {
         <div class="layui-inline"> 
                <label class="layui-form-label">房管员</label> 
                <div class="layui-input-inline"> 
-                   
                       <select name="HouseKeeper" id="HouseKeeper" lay-search>
                               <option value="">请选择</option>
                               {{#  layui.each(d[1], function(index, item1){ }}
@@ -352,6 +353,18 @@ img {
                       </select>
                </div> 
          </div>
+         <div class="layui-inline"> 
+                <label class="layui-form-label">门店</label> 
+                <div class="layui-input-inline"> 
+                       <select name="storeid" id="storeid" lay-search>
+                               <option value="">请选择</option>
+                               {{#  layui.each(d[2], function(index, item1){ }}
+ 
+                               <option value="{{item1.Id}}">{{item1.Name}}</option>
+                               {{# });   }}   
+                       </select>
+                </div> 
+          </div>
          <div class="layui-inline"> 
             <label class="layui-form-label" style="text-align:left;width:auto;">是否装修</label> 
             <div class="layui-input-inline" style="width:auto;" >
