--- a/src/views/house/z-house/add.html
+++ b/src/views/house/z-house/add.html
@@ -37,6 +37,7 @@ img {
             var getTpl = billeditscript.innerHTML
              , view = document.getElementById('bill-edit-view');
             var alldata=[];
+            var storeurl="api/cellname/Querylist";
             var  AreamName="";
             var  Area=0;
             var  BusinessArea="";
@@ -44,14 +45,15 @@ img {
             doc.objectQuery(tsurl, para, function (result) {
                     alldata.push(result.numberData);
                     doc.objectQuery(url1, {  }, function (data) {
-                    debugger;
+                    alldata.push(data.numberData);
+                    doc.objectQuery(storeurl,  {"PageSize":100000,"PageIndex":1}, function (data) {
                     alldata.push(data.numberData);
                     laytpl(getTpl).render(alldata, function (html) {
                     view.innerHTML = html;
                     form.render('');
                     });
                     event();
-                    debugger;
+                    });
              });
             });
             getCityList();
@@ -347,6 +349,16 @@ img {
                               {{#  layui.each(d[1], function(index, item1){ }}
 
                               <option value="{{item1.Id}}">{{item1.RealName}}</option>
+                              {{# });   }}   
+                      </select>
+               </div> 
+               <label class="layui-form-label">门店</label> 
+               <div class="layui-input-inline"> 
+                      <select name="storeid" id="storeid" lay-search>
+                              <option value="">请选择</option>
+                              {{#  layui.each(d[2], function(index, item1){ }}
+
+                              <option value="{{item1.Id}}">{{item1.Name}}</option>
                               {{# });   }}   
                       </select>
                </div> 
